# preventdm

./: .dockerignore  .env.example.compose  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  clients.py  config.py  database.py  main.py  schemas.py
backend/app/models/: __init__.py  base.py  clinical_score.py  patient.py  risk_assessment.py
backend/app/repositories/: __init__.py  assessment_repository.py
backend/app/routers/: __init__.py  assess.py  health.py
backend/tests/: conftest.py  test_assess_error_paths.py  test_assess_happy_path.py  test_health.py  test_repository.py
cli/: README.md  pyproject.toml
cli/preventdm_cli/: checks.py  client.py  main.py  reporter.py  sample_data.py
docs/: README.md  entity-relationship-diagram.md
ml_service/: .env.example  Dockerfile  README.md  pyproject.toml
ml_service/app/: __init__.py  config.py  main.py  schemas.py
ml_service/app/routers/: __init__.py  health.py  predict.py
rust_service/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
rust_service/.cargo/: config.toml
rust_service/src/: config.rs  error.rs  main.rs
rust_service/src/routes/: health.rs  mod.rs  score.rs
rust_service/src/scoring/: ada.rs  cambridge.rs  findrisc.rs  mod.rs
