[project]
name = "preventdm-cli"
version = "0.1.0"
description = "PreventDM CLI test harness — verifies the full assessment pipeline end-to-end"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
preventdm-cli = "preventdm_cli.main:app"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["preventdm_cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
strict = true
python_version = "3.12"
